--- a/Resources/Converters.xaml
+++ b/Resources/Converters.xaml
@@ -8,8 +8,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ac="clr-namespace:Assistant.NINAPlugin.Controls.Converters"
-    xmlns:nc="clr-namespace:NINA.Core.Utility.Converters;assembly=NINA.Core"
-    xmlns:localconverters="clr-namespace:DaleGhent.NINA.GroundStation.Converters">
+    xmlns:localconverters="clr-namespace:DaleGhent.NINA.GroundStation.Converters"
+    xmlns:nc="clr-namespace:NINA.Core.Utility.Converters;assembly=NINA.Core">
 
     <localconverters:HttpMethodEnumPostToVisibilityCollapsed x:Key="HttpMethodEnumPostToVisibilityCollapsed" />
     <localconverters:EmptyStringToEmptyText x:Key="EmptyStringToEmptyText" />
