--- a/PlaySound/PlaySoundOnFailureTriggerTemplate.xaml
+++ b/PlaySound/PlaySoundOnFailureTriggerTemplate.xaml
@@ -37,7 +37,7 @@
                         Margin="5"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        Command="{Binding SelectSoundFileCommand}">
+                        Command="{Binding OpenSelectSoundFileDialogCommand}">
                         <Button.Content>
                             <TextBlock Foreground="{StaticResource ButtonForegroundBrush}" Text="..." />
                         </Button.Content>
