--- a/Config/ConfigDataTemplates.xaml
+++ b/Config/ConfigDataTemplates.xaml
@@ -596,7 +596,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Post Title</TextBlock.Text>
+                                        <TextBlock.Text>Post title</TextBlock.Text>
                                         <TextBlock.ToolTip>The text which appears at the top of an image post</TextBlock.ToolTip>
                                     </TextBlock>
                                     <TextBox
@@ -612,7 +612,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Top">
-                                        <TextBlock.Text>Image Types</TextBlock.Text>
+                                        <TextBlock.Text>Image types</TextBlock.Text>
                                         <TextBlock.ToolTip>The types of images that will be sent to the Discord server</TextBlock.ToolTip>
                                     </TextBlock>
                                     <ListBox
@@ -633,7 +633,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Edge Color</TextBlock.Text>
+                                        <TextBlock.Text>Edge color</TextBlock.Text>
                                         <TextBlock.ToolTip>The color of the left side of the embedded Discord image post</TextBlock.ToolTip>
                                     </TextBlock>
                                     <xceed:ColorPicker
@@ -649,7 +649,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Image Webhook</TextBlock.Text>
+                                        <TextBlock.Text>Image webhook</TextBlock.Text>
                                         <TextBlock.ToolTip>An alternate webhook URL, different from the default one, specifically for image posts</TextBlock.ToolTip>
                                     </TextBlock>
                                     <TextBox
@@ -1083,7 +1083,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Metadata Only</TextBlock.Text>
+                                        <TextBlock.Text>Metadata only</TextBlock.Text>
                                         <TextBlock.ToolTip>Publish only the metdata for the latest image</TextBlock.ToolTip>
                                     </TextBlock>
                                     <CheckBox
@@ -1097,7 +1097,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Image Topic</TextBlock.Text>
+                                        <TextBlock.Text>Image topic</TextBlock.Text>
                                     </TextBlock>
                                     <TextBox
                                         Width="400"
@@ -1112,7 +1112,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>Metadata Topic</TextBlock.Text>
+                                        <TextBlock.Text>Metadata topic</TextBlock.Text>
                                     </TextBlock>
                                     <TextBox
                                         Width="400"
@@ -1127,7 +1127,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center">
-                                        <TextBlock.Text>QoS Level</TextBlock.Text>
+                                        <TextBlock.Text>QoS level</TextBlock.Text>
                                         <TextBlock.ToolTip>The QoS level that images and metadata are published with</TextBlock.ToolTip>
                                     </TextBlock>
                                     <ComboBox
@@ -1143,7 +1143,7 @@
                                         Width="110"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Top">
-                                        <TextBlock.Text>Image Types</TextBlock.Text>
+                                        <TextBlock.Text>Image types</TextBlock.Text>
                                         <TextBlock.ToolTip>The types of images that will be published</TextBlock.ToolTip>
                                     </TextBlock>
                                     <ListBox
@@ -1284,6 +1284,58 @@
                                 <TextBlock Foreground="{StaticResource ButtonForegroundBrush}" Text="..." />
                             </Button.Content>
                         </Button>
+                    </StackPanel>
+                </StackPanel>
+            </TabItem>
+
+            <TabItem Name="Image_Service" Header="Image Service">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                        <TextBlock Text="NOTE: These settings apply to the images sent by all of the services which support doing so." />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Image format</TextBlock.Text>
+                            <TextBlock.ToolTip>The format which the images will be sent</TextBlock.ToolTip>
+                        </TextBlock>
+                        <ComboBox
+                            MinWidth="50"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            ItemsSource="{Binding ImageServiceFormats}"
+                            SelectedIndex="{Binding ImageServiceFormat, Mode=TwoWay}" />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Image scaling</TextBlock.Text>
+                            <TextBlock.ToolTip>Resize the image to the specified percentage before sending it</TextBlock.ToolTip>
+                        </TextBlock>
+                        <ninactrl:UnitTextBox
+                            Width="50"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Unit="%">
+                            <TextBox.Text>
+                                <Binding Mode="TwoWay" Path="ImageServiceImageScaling">
+                                    <Binding.ValidationRules>
+                                        <rules:IntRangeRuleWithDefault>
+                                            <rules:IntRangeRuleWithDefault.ValidRange>
+                                                <rules:IntRangeChecker Maximum="100" Minimum="10" />
+                                            </rules:IntRangeRuleWithDefault.ValidRange>
+                                        </rules:IntRangeRuleWithDefault>
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </ninactrl:UnitTextBox>
                     </StackPanel>
                 </StackPanel>
             </TabItem>
