--- a/Config/GroundStationConfigDataTemplate.xaml
+++ b/Config/GroundStationConfigDataTemplate.xaml
@@ -1,5 +1,4 @@
-﻿
-<!--
+﻿<!--
     Copyright (c) 2024 Dale Ghent <daleg@elemental.org>
 
     This Source Code Form is subject to the terms of the Mozilla Public
@@ -7,7 +6,7 @@
     file, You can obtain one at http://mozilla.org/MPL/2.0/
 -->
 <ResourceDictionary
-    x:Class="DaleGhent.NINA.GroundStation.Config.ConfigDataTemplates"
+    x:Class="DaleGhent.NINA.GroundStation.Config.GroundStationConfigDataTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
