--- a/Options.xaml
+++ b/Options.xaml
@@ -8,12 +8,15 @@
 <ResourceDictionary
     x:Class="DaleGhent.NINA.GroundStation.Options"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:wpfutil="clr-namespace:NINA.WPF.Base.Utility;assembly=NINA.WPF.Base">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Resources/Converters.xaml" />
+        <ResourceDictionary Source="Resources/Icons.xaml" />
         <ResourceDictionary Source="Config/ConfigDataTemplates.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    
+
     <DataTemplate x:Key="Ground Station_Options">
         <StackPanel Orientation="Vertical">
             <ContentControl Content="{Binding GroundStationConfig}" ContentTemplate="{StaticResource Ground_Station_Config}" />
