--- a/Config/GroundStationConfigDataTemplate.xaml
+++ b/Config/GroundStationConfigDataTemplate.xaml
@@ -1167,13 +1167,26 @@
 
             <TabItem Name="TTS" Header="Text-to-Speech">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical">
-                    <!--
                     <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
-                        <Hyperlink NavigateUri="ms-settings:speech" RequestNavigate="Hyperlink_RequestNavigate">
+                        <Hyperlink NavigateUri="ms-settings:speech" RequestNavigate="Hyperlink_RequestNavigate" TextDecorations="None">
                             <Run Text="Open Windows Text-to-speech settings" />
                         </Hyperlink>
                     </TextBlock>
-                    -->
+
+                    <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Voice</TextBlock.Text>
+                        </TextBlock>
+                        <ComboBox
+                            MinWidth="180"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            ItemsSource="{Binding TtsVoices}"
+                            SelectedItem="{Binding TtsVoice, Mode=TwoWay}" />
+                    </StackPanel>
 
                     <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
                         <TextBlock
@@ -1196,7 +1209,7 @@
                     <ninactrl:AsyncProcessButton
                         Width="515"
                         Height="25"
-                        Margin="0,0,0,5"
+                        Margin="0,5,0,5"
                         HorizontalAlignment="Left"
                         ButtonForegroundBrush="{StaticResource ButtonForegroundBrush}"
                         ButtonText="Speak Test Message"
