--- a/Config/GroundStationConfigDataTemplate.xaml
+++ b/Config/GroundStationConfigDataTemplate.xaml
@@ -321,7 +321,7 @@
             </TabItem>
 
             <TabItem Name="Email" Header="Email">
-                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                     <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="110"
@@ -493,8 +493,8 @@
             </TabItem>
 
             <TabItem Name="Discord" Header="Discord">
-                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
-                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                    <TextBlock Margin="0,0,0,5" VerticalAlignment="Center">
                         <Hyperlink NavigateUri="https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks" RequestNavigate="Hyperlink_RequestNavigate">Discord webhook help</Hyperlink>
                     </TextBlock>
 
@@ -539,7 +539,7 @@
 
                     <TabControl Margin="0,10,0,0" TabStripPlacement="Top">
                         <TabItem Name="Discord_FailureMessage" Header="Failure Message">
-                            <GroupBox Margin="0,10,0,0" Header="Failure message template">
+                            <GroupBox Margin="0,10,0,5" Header="Failure message template">
                                 <StackPanel Orientation="Vertical">
                                     <StackPanel Margin="0,0,0,0" Orientation="Vertical">
                                         <TextBox
@@ -576,7 +576,7 @@
                         </TabItem>
 
                         <TabItem Name="Discord_ImageEvent" Header="Image Message">
-                            <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                            <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                 <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                                     <TextBlock
                                         Width="110"
@@ -968,7 +968,7 @@
 
                     <TabControl Margin="0,10,0,0" TabStripPlacement="Top">
                         <TabItem Name="Mqtt_LWT" Header="Last Will &amp; Testament">
-                            <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                            <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                 <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                                     <TextBlock
                                         Width="110"
@@ -1000,7 +1000,7 @@
 
                                 <TabControl Margin="0,10,0,0">
                                     <TabItem Name="Birth_payload" Header="Birth payload">
-                                        <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                                        <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                             <TextBlock Width="110" HorizontalAlignment="Left">
                                                 <TextBlock.Text>Payload text</TextBlock.Text>
                                             </TextBlock>
@@ -1020,7 +1020,7 @@
                                     </TabItem>
 
                                     <TabItem Name="Last_will_payload" Header="Last will payload">
-                                        <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                                        <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                             <TextBlock Width="110" HorizontalAlignment="Left">
                                                 <TextBlock.Text>Payload text</TextBlock.Text>
                                             </TextBlock>
@@ -1040,7 +1040,7 @@
                                     </TabItem>
 
                                     <TabItem Name="Close_payload" Header="Close payload">
-                                        <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                                        <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                             <TextBlock Width="110" HorizontalAlignment="Left">
                                                 <TextBlock.Text>Payload text</TextBlock.Text>
                                             </TextBlock>
@@ -1063,7 +1063,7 @@
                         </TabItem>
 
                         <TabItem Name="Mqtt_ImageEvent" Header="Image Publishing">
-                            <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                            <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                                 <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                                     <TextBlock
                                         Width="110"
@@ -1166,10 +1166,10 @@
             </TabItem>
 
             <TabItem Name="TTS" Header="Text-to-Speech">
-                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
-                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                    <TextBlock Margin="0,0,0,5" VerticalAlignment="Center">
                         <Hyperlink NavigateUri="ms-settings:speech" RequestNavigate="Hyperlink_RequestNavigate" TextDecorations="None">
-                            <Run Text="Open Windows Text-to-speech settings" />
+                            <Run Text="Windows Text-to-speech settings" />
                         </Hyperlink>
                     </TextBlock>
 
@@ -1218,7 +1218,7 @@
 
                     <GroupBox Margin="0,10,0,0" Header="Failure message template">
                         <StackPanel Orientation="Vertical">
-                            <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                            <StackPanel Orientation="Vertical">
                                 <TextBox
                                     MinWidth="515"
                                     MinHeight="400"
@@ -1238,8 +1238,8 @@
             </TabItem>
 
             <TabItem Name="PlaySound" Header="Sounds">
-                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
-                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                    <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="110"
                             HorizontalAlignment="Right"
@@ -1269,7 +1269,7 @@
                         </Button>
                     </StackPanel>
 
-                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                    <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="110"
                             HorizontalAlignment="Right"
@@ -1354,10 +1354,9 @@
             </TabItem>
 
             <TabItem Name="Token_Help" Header="Message Token Help">
-                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                     <TextBlock
                         Width="600"
-                        Margin="0,5,0,0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         TextWrapping="Wrap">
