HTTP client updates

--- a/HTTP/HttpClientSetupView.xaml
+++ b/HTTP/HttpClientSetupView.xaml
@@ -15,6 +15,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ninactrl="clr-namespace:NINA.CustomControlLibrary;assembly=NINA.CustomControlLibrary"
     xmlns:util="clr-namespace:NINA.Core.Utility;assembly=NINA.Core"
+    d:DataContext="{d:DesignInstance Type=local:HttpClientSetup}"
     Name="UC"
     d:DesignHeight="400"
     d:DesignWidth="500"
