--- a/DiscordWebhook/SendToDiscordWebhookSetupView.xaml
+++ b/DiscordWebhook/SendToDiscordWebhookSetupView.xaml
@@ -3,134 +3,130 @@
 
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
-    file, You can obtain one at http://mozilla.org/MPL/2.0/
--->
+    file, You can obtain one at http://mozilla.org/MPL/2.0/-->
 <UserControl
     x:Class="DaleGhent.NINA.GroundStation.DiscordWebhook.SendToDiscordWebhookSetupView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:ns="clr-namespace:NINA.Core.Locale;assembly=NINA.Core"
     xmlns:local="clr-namespace:DaleGhent.NINA.GroundStation.DiscordWebhook"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ns="clr-namespace:NINA.Core.Locale;assembly=NINA.Core"
     xmlns:util="clr-namespace:NINA.Core.Utility;assembly=NINA.Core"
     xmlns:xceed="http://schemas.xceed.com/wpf/xaml/toolkit"
-    d:DataContext="{d:DesignInstance Type=local:SendToDiscordWebhook}"
     Name="UC"
+    d:DataContext="{d:DesignInstance Type=local:SendToDiscordWebhook}"
     d:DesignHeight="400"
     d:DesignWidth="500"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+    <StackPanel Orientation="Vertical">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
+            <Label
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="10,10,10,2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Content="Title" />
+            <TextBox
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="10,10,10,2"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                HorizontalScrollBarVisibility="Auto"
+                MaxLines="1"
+                Text="{Binding Title}"
+                TextWrapping="Wrap" />
 
-        <TextBlock
-            Grid.Row="0"
-            Grid.Column="0"
-            Margin="10,10,10,2"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Center"
-            Text="Title" />
-        <TextBox
-            Grid.Row="0"
-            Grid.Column="1"
-            MinWidth="500"
-            MaxWidth="500"
-            Margin="10,10,10,2"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            HorizontalScrollBarVisibility="Auto"
-            MaxLines="1"
-            Text="{Binding Title}"
-            TextAlignment="Left"
-            TextWrapping="NoWrap" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="10,2,10,2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Content="{ns:Loc LblMessage}" />
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Height="300"
+                Margin="10,2,10,2"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                AcceptsReturn="True"
+                AcceptsTab="True"
+                HorizontalScrollBarVisibility="Auto"
+                Text="{Binding Message}"
+                TextWrapping="NoWrap"
+                VerticalScrollBarVisibility="Auto" />
 
-        <TextBlock
-            Grid.Row="1"
-            Grid.Column="0"
-            Margin="10,2,10,2"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Text="{ns:Loc LblMessage}" />
-        <TextBox
-            Grid.Row="1"
-            Grid.Column="1"
-            MinWidth="500"
-            MaxWidth="500"
-            MinHeight="200"
-            MaxHeight="400"
-            Margin="10,2,10,2"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            AcceptsReturn="True"
-            AcceptsTab="True"
-            Text="{Binding Message}"
-            TextWrapping="NoWrap"
-            HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="0"
+                Margin="10,2,10,2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Content="Edge color" />
+            <xceed:ColorPicker
+                Grid.Row="2"
+                Grid.Column="1"
+                Width="88"
+                Margin="10,2,10,2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                SelectedColor="{Binding DiscordMessageEdgeColor}"
+                UsingAlphaChannel="False" />
+        </Grid>
 
-        <TextBlock
-            Grid.Row="2"
-            Grid.Column="0"
-            Margin="10,2,10,2"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Center"
-            Text="Edge color" />
-        <xceed:ColorPicker
-            Grid.Row="2"
-            Grid.Column="1"
-            Width="88"
-            Margin="10,2,10,2"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            SelectedColor="{Binding DiscordMessageEdgeColor}"
-            UsingAlphaChannel="False" />
-    
-        <Button
-            Grid.Row="3"
-            Grid.Column="1"
-            Width="150"
+        <StackPanel
             Margin="10,10,10,10"
             HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
-            util:ButtonHelper.DialogResult="True"
-            IsDefault="True">
-            <Button.Content>
-                <TextBlock
-                    Margin="5,2,5,2"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Text="{ns:Loc LblOK}" />
-            </Button.Content>
-        </Button>
-        <Button
-            Grid.Row="3"
-            Grid.Column="2"
-            Width="150"
-            Margin="10,10,10,10"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
-            util:ButtonHelper.DialogResult="False"
-            IsCancel="True">
-            <Button.Content>
-                <TextBlock
-                    Margin="5,2,5,2"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Text="{ns:Loc LblCancel}" />
-            </Button.Content>
-        </Button>
-    </Grid>
+            Orientation="Horizontal">
+            <Button
+                Grid.Row="3"
+                Grid.Column="1"
+                Width="150"
+                Margin="0,0,10,0"
+                VerticalAlignment="Center"
+                util:ButtonHelper.DialogResult="True"
+                IsDefault="True">
+                <Button.Content>
+                    <TextBlock
+                        Margin="5,2,5,2"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="{ns:Loc LblOK}" />
+                </Button.Content>
+            </Button>
+            <Button
+                Grid.Row="3"
+                Grid.Column="2"
+                Width="150"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                util:ButtonHelper.DialogResult="False"
+                IsCancel="True">
+                <Button.Content>
+                    <TextBlock
+                        Margin="5,2,5,2"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="{ns:Loc LblCancel}" />
+                </Button.Content>
+            </Button>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
